--- a/vagrant-fanclub/src/App.css
+++ b/vagrant-fanclub/src/App.css
@@ -24,3 +24,13 @@
     padding-bottom: 10px;
     margin-bottom: 10px;
 }
+
+.mx-10 {
+    margin-left: 20rem;
+    margin-right: 20rem;
+}
+
+.card:hover {
+    background-color: blue;
+    color: white;
+}
