--- a/vagrant-fanclub/src/App.css
+++ b/vagrant-fanclub/src/App.css
@@ -1,4 +1,3 @@
-/* src/App.css */
 .App {
     text-align: center;
 }
@@ -7,6 +6,16 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+}
+
+body {
+    margin-top: var(--navbar-height);
+    background-color: black;
+    color: white;
+}
+
+.card-hr {
+    min-height: 10px;
 }
 
 .video {
@@ -30,8 +39,9 @@
     margin-right: 20rem;
 }
 
-.card:hover {
-    background-color: blue;
+.card-hover:hover {
+    background-color: black;
+    border-color: red;
     color: white;
 }
 
@@ -43,10 +53,19 @@
     color: black;
 }
 
+#navLogo {
+    font-family: "Impact", "Aerial Black", sans-serif;
+}
+
 .navbar {
-    background-color: red;
+    background-color: #e10000;
 }
 
 .nav-link {
+    font-family: "Impact", "Aerial Black", sans-serif;
     color: white;
+}
+
+.nav-link:hover {
+    color: black;
 }
